# TfcDutiesBot

./: .gitignore  Cargo.toml  README.md  dockerfile  fly.toml
resources/: table.css  table.html
src/: helpers.rs  main.rs
src/misc/: bot_dialogues.rs  consts.rs  enums.rs  mod.rs  structs.rs
tokens/: priv-key.json
