[package]
name = "tfc_duties_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
regex = "1.7.1"
chrono = "0.4.23"
build_html = "2.2.0"
headless_chrome = "1.0.5"
strum = "0.24"
strum_macros = "0.24.3"
dunce = "1.0.3"