[package]
name = "tfc_duties_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
regex = "1.7.1"
chrono = { version = "0.4.23", features = ["serde"] }
strum = "0.24"
strum_macros = "0.24.3"
dunce = "1.0.3"
num-traits = "0.2.15"
titlecase = "2.2.1"
serde = "^1.0"
serde_json = "^1.0"
reqwest = { version = "0.11.14", features = ["json"] }
csv = "1.2.0"
